test_output.txt
warning: ambiguous glob re-exports
  --> crates\db\src\models\mod.rs:23:9
   |
23 | pub use workflow::*;
   |         ^^^^^^^^^^^ the name `CreateTerminalRequest` in the type namespace is first re-exported here
24 | pub use terminal::*;
   |         ----------- but the name `CreateTerminalRequest` in the type namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: `db` (lib) generated 1 warning
   Compiling services v0.0.153 (E:\GitCortex\.worktrees\phase-18\crates\services)
error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> crates\services\src\services\orchestrator\runtime.rs:265:20
    |
265 |           let rows = sqlx::query!(
    |  ____________________^
266 | |             r#"
267 | |             SELECT id
268 | |             FROM workflow
269 | |             WHERE status = 'running'
270 | |             "#
271 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0449]: visibility qualifiers are not permitted here
  --> crates\services\src\services\cc_switch.rs:90:5
   |
90 |     pub async fn switch_for_terminals(&self, terminals: &[Terminal]) -> anyhow::Result<()> {
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> crates\services\src\services\cc_switch.rs:98:5
   |
98 |     pub async fn detect_cli(&self, cli_name: &str) -> anyhow::Result<bool> {
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `services`
  --> crates\services\src\services\orchestrator\terminal_coordinator.rs:10:5
   |
10 | use services::services::cc_switch::CCSwitch;
   |     ^^^^^^^^ use of unresolved module or unlinked crate `services`
   |
   = help: if you wanted to use a crate named `services`, use `cargo add services` to add it to your `Cargo.toml`

error[E0407]: method `switch_for_terminals` is not a member of trait `CCSwitch`
  --> crates\services\src\services\cc_switch.rs:90:5
   |
90 |       pub async fn switch_for_terminals(&self, terminals: &[Terminal]) -> anyhow::Result<()> {
   |       ^            -------------------- help: there is an associated function with a similar name: `switch_for_terminal`
   |  _____|
   | |
91 | |         for terminal in terminals {
92 | |             self.switch_for_terminal(terminal).await?;
...  |
95 | |     }
   | |_____^ not a member of trait `CCSwitch`

error[E0407]: method `detect_cli` is not a member of trait `CCSwitch`
   --> crates\services\src\services\cc_switch.rs:98:5
    |
 98 | /     pub async fn detect_cli(&self, cli_name: &str) -> anyhow::Result<bool> {
 99 | |         use tokio::process::Command;
100 | |
101 | |         let cli_type = CliType::find_by_name(&self.db.pool, cli_name).await?;
...   |
115 | |     }
    | |_____^ not a member of trait `CCSwitch`

error[E0425]: cannot find function `parse_commit_metadata` in module `crate::services::git_watcher`
   --> crates\services\src\services\orchestrator\agent.rs:191:54
    |
191 |         let metadata = crate::services::git_watcher::parse_commit_metadata(message)?;
    |                                                      ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::services::git_watcher`

error[E0425]: cannot find type `Issue` in module `crate::services::git_watcher`
   --> crates\services\src\services\orchestrator\agent.rs:326:49
    |
326 |         issues: &[crate::services::git_watcher::Issue],
    |                                                 ^^^^^ not found in `crate::services::git_watcher`

warning: unused import: `crate::services::orchestrator::types::TerminalCompletionEvent`
  --> crates\services\src\services\error_handler.rs:15:5
   |
15 | use crate::services::orchestrator::types::TerminalCompletionEvent;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `regex::Regex`
  --> crates\services\src\services\git_watcher.rs:10:5
   |
10 | use regex::Regex;
   |     ^^^^^^^^^^^^

warning: unused import: `BusMessage`
  --> crates\services\src\services\git_watcher.rs:14:37
   |
14 | use crate::services::orchestrator::{BusMessage, MessageBus, TerminalCompletionEvent, TerminalCompletionStatus, CommitMetadata as Orc...
   |                                     ^^^^^^^^^^

warning: unused imports: `execution_process_repo_state::CreateExecutionProcessRepoState`, `project::Project`, `task::Task`, and `workspace::Workspace`
  --> crates\services\src\services\terminal\launcher.rs:11:5
   |
11 |     workspace::Workspace,
   |     ^^^^^^^^^^^^^^^^^^^^
...
14 |     task::Task,
   |     ^^^^^^^^^^
15 |     project::Project,
   |     ^^^^^^^^^^^^^^^^
16 |     execution_process_repo_state::CreateExecutionProcessRepoState,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `sqlx::Row as _`
   --> crates\services\src\services\terminal\launcher.rs:284:13
    |
284 |         use sqlx::Row as _;
    |             ^^^^^^^^^^^^^^

warning: unused import: `RenderError`
 --> crates\services\src\services\template_renderer.rs:7:30
  |
7 | use handlebars::{Handlebars, RenderError};
  |                              ^^^^^^^^^^^

warning: unused import: `error`
  --> crates\services\src\services\orchestrator\persistence.rs:11:22
   |
11 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

warning: unused import: `uuid::Uuid`
  --> crates\services\src\services\orchestrator\persistence.rs:12:5
   |
12 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unnecessary parentheses around type
   --> crates\services\src\services\orchestrator\persistence.rs:158:39
    |
158 |         let row = sqlx::query_as::<_, (Option<String>)>(query)
    |                                       ^              ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
158 -         let row = sqlx::query_as::<_, (Option<String>)>(query)
158 +         let row = sqlx::query_as::<_, Option<String>>(query)
    |

warning: unused import: `crate::services::orchestrator::terminal_coordinator::TerminalCoordinator`
  --> crates\services\src\services\orchestrator\terminal_coordinator_test.rs:11:5
   |
11 | use crate::services::orchestrator::terminal_coordinator::TerminalCoordinator;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> crates\services\src\services\orchestrator\mod.rs:29:1
   |
29 | mod terminal_coordinator_test;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `WorkflowTask` and `Workflow`
  --> crates\services\src\services\orchestrator\terminal_coordinator_test.rs:16:20
   |
16 |         workflow::{Workflow, WorkflowTask},
   |                    ^^^^^^^^  ^^^^^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> crates\services\src\services\orchestrator\mod.rs:29:1
   |
29 | mod terminal_coordinator_test;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::*`
   --> crates\services\src\services\error_handler.rs:205:9
    |
205 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `super::*`
   --> crates\services\src\services\merge_coordinator.rs:281:9
    |
281 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `super::*`
   --> crates\services\src\services\orchestrator\persistence.rs:293:9
    |
293 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `super::*`
   --> crates\services\src\services\orchestrator\runtime.rs:362:9
    |
362 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `super::*`
   --> crates\services\src\services\orchestrator\terminal_coordinator.rs:111:9
    |
111 |     use super::*;
    |         ^^^^^^^^

warning: unused imports: `WorkflowTask` and `Workflow`
  --> crates\services\src\services\orchestrator\terminal_coordinator_test.rs:16:20
   |
16 |         workflow::{Workflow, WorkflowTask},
   |                    ^^^^^^^^  ^^^^^^^^^^^^

Some errors have detailed explanations: E0407, E0425, E0433, E0449.
For more information about an error, try `rustc --explain E0407`.
warning: `services` (lib) generated 11 warnings
error: could not compile `services` (lib) due to 8 previous errors; 11 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `services` (lib test) generated 15 warnings (9 duplicates)
error: could not compile `services` (lib test) due to 8 previous errors; 15 warnings emitted
